11-kubernetes-ingress-config/ingress.yaml
apiVersion: "networking.k8s.io/v1"
kind: "Ingress"
metadata:
  name: "web"
spec:
  ingressClassName: "nginx"
  rules:
    -
      host: "homework.local"
      http:
        paths:
          -
            path: "/"
            pathType: "Prefix"
            backend:
              service:
                name: "config-web"
                port:
                  number: 80
